# bazel-compile-commands

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  BUILD.bazel  CHANGELOG.md  LICENSE.txt  MODULE.bazel  README.md  WORKSPACE  copy.sh  documentation.md  main.cpp  release-please-config.json  renovate.json
.github/workflows/: main.yaml  release-please.yml  release.yaml  renovate.yaml
basil_tonic/: BUILD  README.md  lib.rs  main.rs  service.rs  socket.rs  workspace.rs
bazel/: pandoc-windows.BUILD  pandoc.BUILD  pkg_info.bzl  version_h.bzl
bazel_proto/: BUILD  lib.rs
bcc/: BUILD  BUILD.bazel  artifacts.cpp  artifacts.hpp  bazel.cpp  bazel.hpp  bazel_test.cpp  compile_commands.cpp  compile_commands.hpp  compile_commands_test.cpp  dep_set_of_files.cpp  dep_set_of_files.hpp  dep_set_of_files_test.cpp  main.cpp  options.cpp  options.hpp  path_fragments.cpp  path_fragments.hpp  platform.cpp  platform.hpp  replacements.cpp  replacements.hpp  replacements_test.cpp  string_utils.hpp  string_utils_test.cpp
bcc/detail/: analysis_v2.hpp
clangd-wrapper/: BUILD.bazel  README.md  main.cpp
compile_commands/: BUILD  lib.rs
systemd/: BUILD  basil-tonic.service  basil-tonic.socket
tests/: BUILD  BUILD.bazel  bazel_mock.cpp  self_test.cpp
tests/project/: MODULE.bazel  check-compile-commands-json.py  main.cpp
toolchains/: BUILD
tools/: archive.sh  clang-format  clang-format.ps1  clang-tidy  disk-cache-collect-garbage  rule-info
