module(
    name = "bazel-compile-commands",
    version = "0.21.0",
    compatibility_level = 0,
)

bazel_dep(name = "apple_support", version = "1.23.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "boost.core", version = "1.87.0")
bazel_dep(name = "boost.io", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.json", version = "1.87.0")
bazel_dep(name = "boost.process", version = "1.87.0")
bazel_dep(name = "boost.program_options", version = "1.87.0")
bazel_dep(name = "googleapis", version = "0.0.0-20250826-a92cee39")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "32.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_apple", version = "4.5.3", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "toolchains_musl", version = "0.1.27", dev_dependency = True)

# https://github.com/protocolbuffers/protobuf/issues/22073#issuecomment-2936499960
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = None)

bazel_dep(name = "googletest", version = "1.17.0.bcr.1", dev_dependency = True, repo_name = "com_google_googletest")

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel",
    integrity = "sha256-T/Rg0FAsA7Wcdy9zjXdLedbAWaPVDq+MDnczfdh0m9s=",
    strip_prefix = "bazel-8.0.0",
    urls = [
        "https://github.com/bazelbuild/bazel/archive/refs/tags/8.0.0.tar.gz",
    ],
)

http_archive(
    name = "pandoc_linux_x86_64",
    build_file = "//bazel:pandoc.BUILD",
    integrity = "sha256-jjcCsZX3VBLkJd9G+PPwgkG2aiszq72eBO2lAb/ehgw=",
    strip_prefix = "pandoc-3.6",
    urls = ["https://github.com/jgm/pandoc/releases/download/3.6/pandoc-3.6-linux-amd64.tar.gz"],
)

http_archive(
    name = "pandoc_macos_x86_64",
    build_file = "//bazel:pandoc.BUILD",
    integrity = "sha256-I6KEyo+ibG07XtMkmlu4K1kpuexjYzxMFW3Lv3V67e8=",
    strip_prefix = "pandoc-3.6-x86_64",
    urls = ["https://github.com/jgm/pandoc/releases/download/3.6/pandoc-3.6-x86_64-macOS.zip"],
)

http_archive(
    name = "pandoc_macos_aarch64",
    build_file = "//bazel:pandoc.BUILD",
    integrity = "sha256-eP7a5CZoLym9PA2uUfdyWXOvvAEVM7NYAmVw6lkPx4U=",
    strip_prefix = "pandoc-3.6-arm64",
    urls = ["https://github.com/jgm/pandoc/releases/download/3.6/pandoc-3.6-arm64-macOS.zip"],
)

http_archive(
    name = "pandoc_windows_x86_64",
    build_file = "//bazel:pandoc_windows.BUILD",
    integrity = "sha256-BnMre5bTuZ9xG6G/JPKJ/LW8lWEZK9wb2VFMF8iqLCA=",
    strip_prefix = "pandoc-3.6",
    urls = ["https://github.com/jgm/pandoc/releases/download/3.6/pandoc-3.6-windows-x86_64.zip"],
)
